este es el commit al master

--- a/blog-post.html
+++ b/blog-post.html
@@ -16,6 +16,9 @@
             <p>
                 Este es el parrafo escrito por mi y editado por mi 
             </p>
+            <p>
+                Este es un nuevo parrafo de cambio en el master
+            </p>
         </div>
     </div>
 </body>
